terraform/k8s/modules/containers/status_page/network.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: uptime-kuma-network-policy
  namespace: uptime-kuma
spec:
  podSelector:
    matchLabels:
      app: uptime-kuma
  ingress:
  - from:
    - namespaceSelector: {}
    - podSelector:
        matchLabels:
          name: nginx
    - podSelector:
        matchLabels:
          name: errbot
